# ubuntu

./: .gitignore  helloworld  helloworld.cpp  readme
demo_cmake/: CMakeLists.txt  helloworld.cpp
demo_soldier/: CMakeLists.txt  main.cpp
demo_soldier/include/: gun.h  soldier.h
demo_soldier/src/: gun.cpp  soldier.cpp
demo_swap/: CMakeLists.txt  main  main.cpp
demo_swap/src/: swap.cpp
